Prepare for batch processing

--- a/NER-powered Semantic Search.ipynb
+++ b/NER-powered Semantic Search.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "  'end': 58}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>title</th>\n",
        "      <th>text</th>\n",
        "      <th>url</th>\n",
@@ -140,7 +139,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Mental Note Vol. 24</td>\n",
        "      <td>Photo by Josh Riemer on Unsplash\\n\\nMerry Chri...</td>\n",
        "      <td>https://medium.com/invisible-illness/mental-no...</td>\n",
@@ -150,7 +148,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Your Brain On Coronavirus</td>\n",
        "      <td>Your Brain On Coronavirus\\n\\nA guide to the cu...</td>\n",
        "      <td>https://medium.com/age-of-awareness/how-the-pa...</td>\n",
@@ -160,7 +157,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Mind Your Nose</td>\n",
        "      <td>Mind Your Nose\\n\\nHow smell training can chang...</td>\n",
        "      <td>https://medium.com/neodotlife/mind-your-nose-f...</td>\n",
@@ -170,7 +166,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>The 4 Purposes of Dreams</td>\n",
        "      <td>Passionate about the synergy between science a...</td>\n",
        "      <td>https://medium.com/science-for-real/the-4-purp...</td>\n",
@@ -180,7 +175,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Surviving a Rod Through the Head</td>\n",
        "      <td>You’ve heard of him, haven’t you? Phineas Gage...</td>\n",
        "      <td>https://medium.com/live-your-life-on-purpose/s...</td>\n",
@@ -193,12 +187,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                             title  \\\n",
-       "0           0               Mental Note Vol. 24   \n",
-       "1           1         Your Brain On Coronavirus   \n",
-       "2           2                    Mind Your Nose   \n",
-       "3           3          The 4 Purposes of Dreams   \n",
-       "4           4  Surviving a Rod Through the Head   \n",
+       "                              title  \\\n",
+       "0               Mental Note Vol. 24   \n",
+       "1         Your Brain On Coronavirus   \n",
+       "2                    Mind Your Nose   \n",
+       "3          The 4 Purposes of Dreams   \n",
+       "4  Surviving a Rod Through the Head   \n",
        "\n",
        "                                                text  \\\n",
        "0  Photo by Josh Riemer on Unsplash\\n\\nMerry Chri...   \n",
@@ -229,7 +223,7 @@
        "4  ['Brain', 'Health', 'Development', 'Psychology...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +236,294 @@
     "\n",
     "df = pd.read_csv(\"medium_articles_10k.csv\")\n",
     "\n",
+    "df = df.drop(columns=['Unnamed: 0'])\n",
+    "\n",
     "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare the Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>url</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>text_extended</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mental Note Vol. 24</td>\n",
+       "      <td>Photo by Josh Riemer on Unsplash\\n\\nMerry Chri...</td>\n",
+       "      <td>https://medium.com/invisible-illness/mental-no...</td>\n",
+       "      <td>['Ryan Fan']</td>\n",
+       "      <td>2020-12-26 03:38:10.479000+00:00</td>\n",
+       "      <td>['Mental Health', 'Health', 'Psychology', 'Sci...</td>\n",
+       "      <td>Mental Note Vol. 24 Photo by Josh Riemer on Un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Your Brain On Coronavirus</td>\n",
+       "      <td>Your Brain On Coronavirus\\n\\nA guide to the cu...</td>\n",
+       "      <td>https://medium.com/age-of-awareness/how-the-pa...</td>\n",
+       "      <td>['Simon Spichak']</td>\n",
+       "      <td>2020-09-23 22:10:17.126000+00:00</td>\n",
+       "      <td>['Mental Health', 'Coronavirus', 'Science', 'P...</td>\n",
+       "      <td>Your Brain On Coronavirus Your Brain On Corona...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mind Your Nose</td>\n",
+       "      <td>Mind Your Nose\\n\\nHow smell training can chang...</td>\n",
+       "      <td>https://medium.com/neodotlife/mind-your-nose-f...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>2020-10-10 20:17:37.132000+00:00</td>\n",
+       "      <td>['Biotechnology', 'Neuroscience', 'Brain', 'We...</td>\n",
+       "      <td>Mind Your Nose Mind Your Nose\\n\\nHow smell tra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The 4 Purposes of Dreams</td>\n",
+       "      <td>Passionate about the synergy between science a...</td>\n",
+       "      <td>https://medium.com/science-for-real/the-4-purp...</td>\n",
+       "      <td>['Eshan Samaranayake']</td>\n",
+       "      <td>2020-12-21 16:05:19.524000+00:00</td>\n",
+       "      <td>['Health', 'Neuroscience', 'Mental Health', 'P...</td>\n",
+       "      <td>The 4 Purposes of Dreams Passionate about the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Surviving a Rod Through the Head</td>\n",
+       "      <td>You’ve heard of him, haven’t you? Phineas Gage...</td>\n",
+       "      <td>https://medium.com/live-your-life-on-purpose/s...</td>\n",
+       "      <td>['Rishav Sinha']</td>\n",
+       "      <td>2020-02-26 00:01:01.576000+00:00</td>\n",
+       "      <td>['Brain', 'Health', 'Development', 'Psychology...</td>\n",
+       "      <td>Surviving a Rod Through the Head You’ve heard ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              title  \\\n",
+       "0               Mental Note Vol. 24   \n",
+       "1         Your Brain On Coronavirus   \n",
+       "2                    Mind Your Nose   \n",
+       "3          The 4 Purposes of Dreams   \n",
+       "4  Surviving a Rod Through the Head   \n",
+       "\n",
+       "                                                text  \\\n",
+       "0  Photo by Josh Riemer on Unsplash\\n\\nMerry Chri...   \n",
+       "1  Your Brain On Coronavirus\\n\\nA guide to the cu...   \n",
+       "2  Mind Your Nose\\n\\nHow smell training can chang...   \n",
+       "3  Passionate about the synergy between science a...   \n",
+       "4  You’ve heard of him, haven’t you? Phineas Gage...   \n",
+       "\n",
+       "                                                 url                 authors  \\\n",
+       "0  https://medium.com/invisible-illness/mental-no...            ['Ryan Fan']   \n",
+       "1  https://medium.com/age-of-awareness/how-the-pa...       ['Simon Spichak']   \n",
+       "2  https://medium.com/neodotlife/mind-your-nose-f...                      []   \n",
+       "3  https://medium.com/science-for-real/the-4-purp...  ['Eshan Samaranayake']   \n",
+       "4  https://medium.com/live-your-life-on-purpose/s...        ['Rishav Sinha']   \n",
+       "\n",
+       "                          timestamp  \\\n",
+       "0  2020-12-26 03:38:10.479000+00:00   \n",
+       "1  2020-09-23 22:10:17.126000+00:00   \n",
+       "2  2020-10-10 20:17:37.132000+00:00   \n",
+       "3  2020-12-21 16:05:19.524000+00:00   \n",
+       "4  2020-02-26 00:01:01.576000+00:00   \n",
+       "\n",
+       "                                                tags  \\\n",
+       "0  ['Mental Health', 'Health', 'Psychology', 'Sci...   \n",
+       "1  ['Mental Health', 'Coronavirus', 'Science', 'P...   \n",
+       "2  ['Biotechnology', 'Neuroscience', 'Brain', 'We...   \n",
+       "3  ['Health', 'Neuroscience', 'Mental Health', 'P...   \n",
+       "4  ['Brain', 'Health', 'Development', 'Psychology...   \n",
+       "\n",
+       "                                       text_extended  \n",
+       "0  Mental Note Vol. 24 Photo by Josh Riemer on Un...  \n",
+       "1  Your Brain On Coronavirus Your Brain On Corona...  \n",
+       "2  Mind Your Nose Mind Your Nose\\n\\nHow smell tra...  \n",
+       "3  The 4 Purposes of Dreams Passionate about the ...  \n",
+       "4  Surviving a Rod Through the Head You’ve heard ...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.dropna()\n",
+    "\n",
+    "# Title + first 1000 characters of the text\n",
+    "df[\"text_extended\"] = df[\"title\"] + \" \" + df[\"text\"].str[:1000]\n",
+    "\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Josh Riemer', 'Unsplash Merry Christmas', 'Holidays'],\n",
+       " ['Coronavirus', 'Coronavirus', 'ACE2', 'ACE2'],\n",
+       " ['Ann', 'Sophie Barwich'],\n",
+       " ['of Dreams'],\n",
+       " ['Rod Through',\n",
+       "  'Head',\n",
+       "  'Phineas Gage',\n",
+       "  'Cherry',\n",
+       "  'Phineas Gage',\n",
+       "  'Phineas Gage',\n",
+       "  'Vermont',\n",
+       "  'Cherry',\n",
+       "  'Phineas Gage'],\n",
+       " ['Canva Pro “ Young',\n",
+       "  'COVID',\n",
+       "  '19',\n",
+       "  'Holman',\n",
+       "  'Science Advances 2020',\n",
+       "  'COVID',\n",
+       "  'COVID',\n",
+       "  '19',\n",
+       "  'Holman'],\n",
+       " ['Popular Blog Series',\n",
+       "  'Popular Blog',\n",
+       "  'John Schnobrich',\n",
+       "  'Unsplash',\n",
+       "  'Medium'],\n",
+       " ['Faisal Dar',\n",
+       "  'Pioneer',\n",
+       "  'Liver',\n",
+       "  'Transplantation',\n",
+       "  'Pakistan',\n",
+       "  'Faisal Dar',\n",
+       "  'Pioneer',\n",
+       "  'Liver',\n",
+       "  'Transplantation',\n",
+       "  'Pakistan',\n",
+       "  'Fasial Dar',\n",
+       "  'Pakistan',\n",
+       "  'Shifa International Hospital',\n",
+       "  'Islamabad',\n",
+       "  'Pakistan',\n",
+       "  'Fatima Arif',\n",
+       "  'Faisal Dar',\n",
+       "  'Faisalabad',\n",
+       "  'Kotla Bhalot',\n",
+       "  'Kharian',\n",
+       "  'District Gujrat',\n",
+       "  'Kharian Cantt',\n",
+       "  'MBBS',\n",
+       "  'Allama Iqbal Medical',\n",
+       "  'College',\n",
+       "  'Lahore',\n",
+       "  'College of Physicians & Surgeons',\n",
+       "  'Pakistan',\n",
+       "  'Ireland',\n",
+       "  'Royal College of Surgeons'],\n",
+       " ['Supplement For Our Mental',\n",
+       "  'Supplement For Our Mental Health',\n",
+       "  'Rampal Singh',\n",
+       "  'Unsplash Yoga'],\n",
+       " ['Alfred North Whitehead', 'Occam', 'Eve Marder']]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_batch = df[\"text_extended\"].iloc[0:10].tolist()\n",
+    "\n",
+    "# Get the entities for each document\n",
+    "def extract_entities(doc_list):\n",
+    "    entities = []\n",
+    "    for doc in doc_list:\n",
+    "        entities.append([item[\"word\"] for item in nlp(doc)])\n",
+    "    return entities\n",
+    "\n",
+    "extract_entities(df_batch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Batch Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.01077694,  0.08219115, -0.00246149, ...,  0.00261581,\n",
+       "        -0.03726843, -0.02089519],\n",
+       "       [-0.00094947, -0.03033547,  0.01269015, ..., -0.00528725,\n",
+       "        -0.01578944, -0.03104796],\n",
+       "       [ 0.01388078,  0.02739986, -0.01316181, ...,  0.00952041,\n",
+       "        -0.00202966, -0.01931475],\n",
+       "       ...,\n",
+       "       [ 0.00156106,  0.03738706,  0.00391071, ...,  0.04735938,\n",
+       "         0.02094811,  0.00863307],\n",
+       "       [ 0.05167719, -0.02599909, -0.01801309, ..., -0.03292792,\n",
+       "        -0.05905078, -0.04403665],\n",
+       "       [-0.02391353,  0.02338496, -0.03395603, ...,  0.0610911 ,\n",
+       "        -0.01906551, -0.07216242]], dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_batch_vectors = retriever.encode(df_batch)\n",
+    "df_batch_vectors"
    ]
   },
   {
