Change model and aggregation strategy to improve the result

--- a/NERT-Portuguese.ipynb
+++ b/NERT-Portuguese.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c32dec44124a4a33b863790caae2d3ee",
+       "model_id": "b2d1c390aec543fb817fcb164ae578d3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/1.38k [00:00<?, ?B/s]"
+       "tokenizer_config.json:   0%|          | 0.00/420 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8117d1f9de3b43a2a81ebf06248e812f",
+       "model_id": "d61e3576578542d0a0e89b72ec78fe06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,12 +43,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8599ccf84462407785b380540dc26d7a",
+       "model_id": "3f481b98038b40509389d320d384e60f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/678k [00:00<?, ?B/s]"
+       "special_tokens_map.json:   0%|          | 0.00/137 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -57,12 +57,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48777a1362ec452285946891d1af30fd",
+       "model_id": "5da2696fd3684d74a164f51b0c611fe8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/695 [00:00<?, ?B/s]"
+       "config.json:   0%|          | 0.00/1.70k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -71,30 +71,25 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef59023af7e84c5db804e1ec5acd88d5",
+       "model_id": "c74b18eac2ad45c396a8e5d5c80693cd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "config.json:   0%|          | 0.00/2.09k [00:00<?, ?B/s]"
+       "model.safetensors:   0%|          | 0.00/436M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dab2b5f7f95140138549a691b0b46efb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/433M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at marquesafonso/bertimbau-large-ner-total were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'crf.end_transitions', 'crf.start_transitions', 'crf.transitions']\n",
+      "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
     }
    ],
    "source": [
@@ -103,8 +98,7 @@
     "\n",
     "\n",
     "# Setup model, tokenizer and device\n",
-    "\n",
-    "model_id = \"rhaymison/ner-portuguese-br-bert-cased\"\n",
+    "model_id = \"marquesafonso/bertimbau-large-ner-total\"\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "\n",
@@ -115,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,70 +127,37 @@
     "    \"ner\",\n",
     "    model=ner_model,\n",
     "    device=device,\n",
-    "    tokenizer=tokenizer\n",
+    "    tokenizer=tokenizer,\n",
+    "    aggregation_strategy=\"simple\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[{'entity': 'B-PER',\n",
-       "  'score': 0.9943414,\n",
-       "  'index': 7,\n",
-       "  'word': 'Vin',\n",
+       "[{'entity_group': 'ABSTRACCAO',\n",
+       "  'score': 0.81667435,\n",
+       "  'word': 'Vinicius Fin',\n",
        "  'start': 15,\n",
-       "  'end': 18},\n",
-       " {'entity': 'B-PER',\n",
-       "  'score': 0.99167484,\n",
-       "  'index': 8,\n",
-       "  'word': '##ici',\n",
-       "  'start': 18,\n",
-       "  'end': 21},\n",
-       " {'entity': 'B-PER',\n",
-       "  'score': 0.99174833,\n",
-       "  'index': 9,\n",
-       "  'word': '##us',\n",
-       "  'start': 21,\n",
-       "  'end': 23},\n",
-       " {'entity': 'I-PER',\n",
-       "  'score': 0.99562496,\n",
-       "  'index': 10,\n",
-       "  'word': 'Fin',\n",
-       "  'start': 24,\n",
        "  'end': 27},\n",
-       " {'entity': 'I-PER',\n",
-       "  'score': 0.99485344,\n",
-       "  'index': 11,\n",
+       " {'entity_group': 'PESSOA',\n",
+       "  'score': 0.52743745,\n",
        "  'word': '##ger',\n",
        "  'start': 27,\n",
        "  'end': 30},\n",
-       " {'entity': 'B-LOC',\n",
-       "  'score': 0.995808,\n",
-       "  'index': 17,\n",
-       "  'word': 'Cano',\n",
+       " {'entity_group': 'LOCAL',\n",
+       "  'score': 0.9936765,\n",
+       "  'word': 'Canoas',\n",
        "  'start': 44,\n",
-       "  'end': 48},\n",
-       " {'entity': 'B-LOC',\n",
-       "  'score': 0.99465805,\n",
-       "  'index': 18,\n",
-       "  'word': '##as',\n",
-       "  'start': 48,\n",
        "  'end': 50}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
