Upsert data to pinecone

--- a/NER-powered Semantic Search.ipynb
+++ b/NER-powered Semantic Search.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "  'end': 58}]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "4  Why Money Mindset Is Important For Writers Wri...  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,168 +294,38 @@
     "    \n",
     "    df_batch = df.iloc[i:i_end].copy()\n",
     "    \n",
-    "    df_batch_vectors = retriever.encode(df_batch[\"text_extended\"].astype(str).tolist()).tolist()\n",
+    "    embeddings = retriever.encode(df_batch[\"text_extended\"].astype(str).tolist()).tolist()\n",
     "    \n",
     "    entities = extract_entities(df_batch[\"text_extended\"].astype(str).tolist())\n",
     "    \n",
-    "    df_batch[\"named_entities\"] = [list(set(entity)) for entity in entities]"
+    "    df_batch[\"named_entities\"] = [list(set(entity)) for entity in entities]\n",
+    "    \n",
+    "    df_batch = df_batch.drop('text', axis=1)\n",
+    "    \n",
+    "    metadata = df_batch.to_dict(orient='records')\n",
+    "    \n",
+    "    ids = [f\"{idx}\" for idx in range(i, i_end)]\n",
+    "    \n",
+    "    vectors_to_upsert = list(zip(ids, embeddings, metadata))\n",
+    "    \n",
+    "    _ = index.upsert(vectors= vectors_to_upsert)\n",
+    "    \n",
+    "    index.describe_index_stats()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query Information using NER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>url</th>\n",
-       "      <th>authors</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>text_extended</th>\n",
-       "      <th>named_entities</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>What We Can Learn About Emotional Payoff From ...</td>\n",
-       "      <td>What We Can Learn About Emotional Payoff From ...</td>\n",
-       "      <td>https://medium.com/no-blank-pages/what-we-can-...</td>\n",
-       "      <td>['Jennie Nash']</td>\n",
-       "      <td>2020-11-05 20:51:24.705000+00:00</td>\n",
-       "      <td>['Storytelling', 'Books And Authors', 'Books',...</td>\n",
-       "      <td>What We Can Learn About Emotional Payoff From ...</td>\n",
-       "      <td>[Alert, Serena Repice Lentini, Dan Blank, The ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>drowning</td>\n",
-       "      <td>i drown in my emotions\\n\\nof heart sickness an...</td>\n",
-       "      <td>https://medium.com/@halleee/drowning-ea53e30b48da</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2021-08-25 06:20:09.086000+00:00</td>\n",
-       "      <td>['Travel Writing', 'Writing', 'Poetry', 'Menta...</td>\n",
-       "      <td>drowning i drown in my emotions\\n\\nof heart si...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>How to make a movie recommender: connecting se...</td>\n",
-       "      <td>Docker is a great tool to make deployment and ...</td>\n",
-       "      <td>https://medium.com/analytics-vidhya/how-to-mak...</td>\n",
-       "      <td>['Juan Domingo Ortuzar']</td>\n",
-       "      <td>2020-12-17 16:12:50.450000+00:00</td>\n",
-       "      <td>['Docker', 'Docker Compose', 'Recommendation S...</td>\n",
-       "      <td>How to make a movie recommender: connecting se...</td>\n",
-       "      <td>[Linux, Windows, Mac, Docker]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>From Idea to Launch</td>\n",
-       "      <td>Icons by Flaticon\\n\\nThis is the story of how ...</td>\n",
-       "      <td>https://medium.com/@guillemrossalvador/from-id...</td>\n",
-       "      <td>['Guillem Ros']</td>\n",
-       "      <td>2019-11-17 15:09:38.621000+00:00</td>\n",
-       "      <td>['Startup', 'Product Development', 'Indie', 'R...</td>\n",
-       "      <td>From Idea to Launch Icons by Flaticon\\n\\nThis ...</td>\n",
-       "      <td>[Google, Flaticon, Hevy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>A look at the two significant features of Beld...</td>\n",
-       "      <td>Beldex’s coin\\n\\nBeldex coins are privacy enab...</td>\n",
-       "      <td>https://medium.com/beldex/a-look-at-the-two-si...</td>\n",
-       "      <td>['Beldex Exchange']</td>\n",
-       "      <td>2019-07-16 06:30:57.550000+00:00</td>\n",
-       "      <td>['Newcrypto', 'Cryptocurrency Investment', 'Be...</td>\n",
-       "      <td>A look at the two significant features of Beld...</td>\n",
-       "      <td>[Twitter, Facebook, Centralized, Artificial In...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                title  \\\n",
-       "90  What We Can Learn About Emotional Payoff From ...   \n",
-       "91                                           drowning   \n",
-       "92  How to make a movie recommender: connecting se...   \n",
-       "93                                From Idea to Launch   \n",
-       "94  A look at the two significant features of Beld...   \n",
-       "\n",
-       "                                                 text  \\\n",
-       "90  What We Can Learn About Emotional Payoff From ...   \n",
-       "91  i drown in my emotions\\n\\nof heart sickness an...   \n",
-       "92  Docker is a great tool to make deployment and ...   \n",
-       "93  Icons by Flaticon\\n\\nThis is the story of how ...   \n",
-       "94  Beldex’s coin\\n\\nBeldex coins are privacy enab...   \n",
-       "\n",
-       "                                                  url  \\\n",
-       "90  https://medium.com/no-blank-pages/what-we-can-...   \n",
-       "91  https://medium.com/@halleee/drowning-ea53e30b48da   \n",
-       "92  https://medium.com/analytics-vidhya/how-to-mak...   \n",
-       "93  https://medium.com/@guillemrossalvador/from-id...   \n",
-       "94  https://medium.com/beldex/a-look-at-the-two-si...   \n",
-       "\n",
-       "                     authors                         timestamp  \\\n",
-       "90           ['Jennie Nash']  2020-11-05 20:51:24.705000+00:00   \n",
-       "91                        []  2021-08-25 06:20:09.086000+00:00   \n",
-       "92  ['Juan Domingo Ortuzar']  2020-12-17 16:12:50.450000+00:00   \n",
-       "93           ['Guillem Ros']  2019-11-17 15:09:38.621000+00:00   \n",
-       "94       ['Beldex Exchange']  2019-07-16 06:30:57.550000+00:00   \n",
-       "\n",
-       "                                                 tags  \\\n",
-       "90  ['Storytelling', 'Books And Authors', 'Books',...   \n",
-       "91  ['Travel Writing', 'Writing', 'Poetry', 'Menta...   \n",
-       "92  ['Docker', 'Docker Compose', 'Recommendation S...   \n",
-       "93  ['Startup', 'Product Development', 'Indie', 'R...   \n",
-       "94  ['Newcrypto', 'Cryptocurrency Investment', 'Be...   \n",
-       "\n",
-       "                                        text_extended  \\\n",
-       "90  What We Can Learn About Emotional Payoff From ...   \n",
-       "91  drowning i drown in my emotions\\n\\nof heart si...   \n",
-       "92  How to make a movie recommender: connecting se...   \n",
-       "93  From Idea to Launch Icons by Flaticon\\n\\nThis ...   \n",
-       "94  A look at the two significant features of Beld...   \n",
-       "\n",
-       "                                       named_entities  \n",
-       "90  [Alert, Serena Repice Lentini, Dan Blank, The ...  \n",
-       "91                                                 []  \n",
-       "92                      [Linux, Windows, Mac, Docker]  \n",
-       "93                           [Google, Flaticon, Hevy]  \n",
-       "94  [Twitter, Facebook, Centralized, Artificial In...  "
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_batch.head()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
